Updated repo link in HTML pages

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -12,7 +12,7 @@
     with a bunch of multi-cultural teams on various tech products and services!
     <br>
     <br>
-    Looking forward to working with me ? 
+    Looking forward to working with me ?
     <br>
     mail: imran.zinga000@gmail.com
     <br>
@@ -27,7 +27,8 @@
     about it. As a part of that, I found this really minimalistic python web framework, FLASK and hence I built this!
     <br>
     Is there a better way to improve the code I have written? even better found a bug..? Please be a Dear and file an
-    issue on <a class = "github-about" href="#">Github</a>, or even better, submit a PR to fix that!
+    issue on <a class="github-about" href="https://github.com/Imran-456/thoughts">Github</a>, or even better, submit a
+    PR to fix that!
     <br>
     Happy coding folks!
 </div>
