--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -50,10 +50,11 @@
     {% block content %}{% endblock %}
     <hr>
     <div class="footer">
-      <div class="github-link"><a href="#">Git hub</a></div>
+      <div class="github-link"><a href="https://github.com/Imran-456/thoughts">Git hub</a></div>
       <div class="footer-message">Made in ❤️ with Python!</div>
       <div class="about-link"><a href="{{ url_for('about') }}">About</a></div>
     </div>
   </div>
 </body>
+
 </html>
